# quizzer

./: Cargo.toml  LICENSE  README.md  build-artifacts.sh
.github/workflows/: test.yml
src/: data.rs  main.rs  objects.rs  prompt.rs  quiz.rs
