[package]
name = "quizzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind" # This is the default but I might change it in the future
opt-level = "z"

[dependencies]
bincode = "1.3.3"
serde = {version = "1.0.152", features = ["derive"]}
